<resources>
    <string name="app_name">RFInD</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_product">DisplayProductActivity</string>
    <string name="Featured">Featured</string>
    <string name="Apparel">Apparel</string>
    <string name="Department">Department</string>
    <string name="Description">Item image</string>
    <string name="Text">TextView</string>
</resources>
