<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ItemListFragment">
    <item android:id="@+id/Featured" android:title="@string/Featured" app:showAsAction="never"/>
    <item android:id="@+id/Apparel" android:title="@string/Apparel" app:showAsAction="never"/>
    <item android:id="@+id/Department" android:title="@string/Department" app:showAsAction="never"/>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/search_field"
        android:title="@string/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>
</menu>